Initial tests and fixes

--- a/index.html
+++ b/index.html
@@ -10,17 +10,68 @@
 
         <link rel="stylesheet" href="css/normalize.css">
         <link rel="stylesheet" href="css/main.css">
+        <link href='https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,300' rel='stylesheet' type='text/css'>
             </head>
 
 
 <body>
 
-Hello world
+<div class="vesak-title">
+
+Vesak
+
+</div>
 
 
+<div id="english-conversion-form">
+<select name="year" id="english-date-selector">
+    <option value="1970">1970</option>
+    <option value="1971">1971</option>
+    <option value="1972">1972</option>
+    <option value="1973">1973</option>
+    <option value="1993">1993</option>
+    <option value="2016" selected="selected">2016</option>
 
 
+</select>
+<select name="month" id= "english-month-selector">
+    <option value="1"  selected="selected">January</option>
+    <option value="2" >February</option>
+    <option value="3" >March</option>
+    <option value="4" >April</option>
+    <option value="5" >May</option>
+    <option value="6" >June</option>
+    <option value="7" >July</option>
+    <option value="8" >August</option>
+    <option value="9" >September</option>
+    <option value="10" >October</option>
+    <option value="11" >November</option>
+    <option value="12" >December</option>
 
+</select>
+
+<select name="day" id= "english-day-selector">
+    <option value="1"  selected="selected">1</option>
+    <option value="2">2</option>
+    <option value="3">3</option>
+    <option value="4">4</option>
+    <option value="5">5</option>
+    <option value="6">6</option>
+    <option value="7">7</option>
+    <option value="8">8</option>
+    <option value="9">9</option>
+    <option value="10">10</option>
+    <option value="11">11</option>
+    <option value="12">12</option>
+    <option value="13">13</option>
+    <option value="14">14</option>
+    <option value="15">15</option>
+
+</select>
+
+
+<button id="english-convert-button">Convert</button>
+</div>
 </body>
 
 <script type="text/javascript" src="js/jquery-1.12.0.min.js" ></script>
