Sent a lot useless files to the deepest corners of hell

--- a/index.html
+++ b/index.html
@@ -292,12 +292,13 @@
         </form>
 
         <div class="row">
-            <div class="col col--1-of-1">
-                <a class="pure-button pure-button-primary centered" id="convert-button" href="#" role="button">Convert to Nepali</a>
+            <div class="col col--1-of-1 right">
+                <a class="pure-button pure-button-primary" id="convert-button" href="#" role="button">Convert to Nepali</a>
             </div>
         </div>
 
     </div>
+
 
 </body>
 
