Reduced request by bundling some libraries together

--- a/index.html
+++ b/index.html
@@ -329,9 +329,7 @@
 
 
 <script type="text/javascript" src="js/jquery.min.js"></script>
-<script type="text/javascript" src="js/date.js"></script>
-<script type="text/javascript" src="js/neptoeng.js"></script>
-<script type="text/javascript" src="js/engtonep.js"></script>
+<script type="text/javascript" src="js/date-bundle.js"></script>
 <script type="text/javascript" src="js/main.js"></script>
 </body>
 </html>
